--- a/sellit/src/main/java/com/sellit/controller/Footer.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Footer.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="20.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.FooterController">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="18.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.FooterController">
+   <children>
+      <Button layoutY="-1.0" mnemonicParsing="false" prefHeight="18.0" text="Button" />
+   </children>
 </AnchorPane>
