--- a/sellit/src/main/java/com/sellit/controller/Header.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Header.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="40.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.HeaderController">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="50.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.HeaderController">
+   <children>
+      <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Home" />
+      <Button layoutX="192.0" mnemonicParsing="false" onAction="#showPrevious" prefHeight="50.0" prefWidth="150.0" text="BACK" />
+   </children>
 </AnchorPane>
