--- a/sellit/src/main/java/com/sellit/controller/Menu.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Menu.fxml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.MenuController">
+<AnchorPane prefHeight="600.0" prefWidth="166.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.MenuController">
    <children>
-      <TreeView fx:id="menuTree" layoutX="14.0" layoutY="85.0" prefHeight="600.0" prefWidth="214.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <VBox layoutX="14.0" layoutY="92.0" prefHeight="600.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Sale" />
+            <Button mnemonicParsing="false" onAction="#showProduct" prefHeight="50.0" prefWidth="166.0" text="Product" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Inventory" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Employee" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Report" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Options" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Notice" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
