--- a/sellit/src/main/java/com/sellit/controller/ProductManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/ProductManageView.fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.ProductManageViewController">
    <children>
-      <Label layoutX="17.0" layoutY="57.0" text="Full name" />
-      <Label layoutX="17.0" layoutY="20.0" text="Barcode" />
-      <TextField fx:id="barcodeField" layoutX="184.0" layoutY="20.0" />
-      <TextField fx:id="fullNameField" layoutX="184.0" layoutY="57.0" />
+      <Label layoutX="14.0" layoutY="103.0" text="Full name" />
+      <Label layoutX="14.0" layoutY="66.0" text="Barcode" />
+      <TextField fx:id="barcodeField" layoutX="181.0" layoutY="66.0" />
+      <TextField fx:id="fullNameField" layoutX="181.0" layoutY="103.0" />
       <Button layoutX="907.0" layoutY="51.0" mnemonicParsing="false" onAction="#close" prefHeight="30.0" prefWidth="80.0" text="Cancel" />
       <Button layoutX="818.0" layoutY="51.0" mnemonicParsing="false" onAction="#save" prefHeight="30.0" prefWidth="80.0" text="Save" />
-      <Label layoutX="17.0" layoutY="128.0" text="Short name in other langauge" />
-      <Label layoutX="17.0" layoutY="91.0" text="Short name in English" />
-      <TextField fx:id="shortNameInEnglishField" layoutX="184.0" layoutY="91.0" />
-      <TextField fx:id="shortNameInOtherLanguageField" layoutX="184.0" layoutY="128.0" />
-      <Label layoutX="17.0" layoutY="202.0" text="Safety inventory on hand" />
-      <Label layoutX="17.0" layoutY="165.0" text="Inventory on hand" />
-      <TextField fx:id="inventoryOnHandField" layoutX="184.0" layoutY="165.0" />
-      <TextField fx:id="safetyInventoryOnHandField" layoutX="184.0" layoutY="202.0" />
-      <Label layoutX="17.0" layoutY="272.0" text="Sales amount" />
-      <Label layoutX="17.0" layoutY="235.0" text="Cost amount" />
-      <TextField fx:id="costAmountField" layoutX="184.0" layoutY="235.0" />
-      <TextField fx:id="salesAmountField" layoutX="184.0" layoutY="272.0" />
+      <Label layoutX="14.0" layoutY="174.0" text="Short name in other langauge" />
+      <Label layoutX="14.0" layoutY="137.0" text="Short name in English" />
+      <TextField fx:id="shortNameInEnglishField" layoutX="181.0" layoutY="137.0" />
+      <TextField fx:id="shortNameInOtherLanguageField" layoutX="181.0" layoutY="174.0" />
+      <Label layoutX="14.0" layoutY="248.0" text="Safety inventory on hand" />
+      <Label layoutX="14.0" layoutY="211.0" text="Inventory on hand" />
+      <TextField fx:id="inventoryOnHandField" layoutX="181.0" layoutY="211.0" />
+      <TextField fx:id="safetyInventoryOnHandField" layoutX="181.0" layoutY="248.0" />
+      <Label layoutX="14.0" layoutY="318.0" text="Sales amount" />
+      <Label layoutX="14.0" layoutY="281.0" text="Cost amount" />
+      <TextField fx:id="costAmountField" layoutX="181.0" layoutY="281.0" />
+      <TextField fx:id="salesAmountField" layoutX="181.0" layoutY="318.0" />
+      <ChoiceBox fx:id="departmentChoiceBox" layoutX="181.0" layoutY="26.0" prefWidth="150.0" />
+      <Label layoutX="14.0" layoutY="30.0" text="Department" />
    </children>
 </AnchorPane>
