--- a/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.DepartmentManageViewController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentManageViewController">
    <children>
       <Label layoutX="67.0" layoutY="111.0" text="Department Name" />
       <TextField fx:id="departmentNameField" layoutX="233.0" layoutY="107.0" />
