--- a/sellit/src/main/java/com/sellit/controller/inventory/ProductManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/ProductManageView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.ProductManageViewController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.ProductManageViewController">
    <children>
       <Label layoutX="14.0" layoutY="103.0" text="Full name" />
       <Label layoutX="14.0" layoutY="66.0" text="Barcode" />
