--- a/sellit/src/main/java/com/sellit/controller/Footer.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Footer.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="18.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.FooterController">
-   <children>
-      <Button layoutY="-1.0" mnemonicParsing="false" prefHeight="18.0" text="Button" />
-   </children>
-</AnchorPane>
+<AnchorPane prefHeight="80.0" prefWidth="1920.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.FooterController" />
