--- a/sellit/src/main/java/com/sellit/controller/Header.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Header.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="50.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.HeaderController">
+<AnchorPane prefHeight="100.0" prefWidth="1920.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.HeaderController">
    <children>
-      <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Home" />
-      <Button layoutX="192.0" mnemonicParsing="false" onAction="#showPrevious" prefHeight="50.0" prefWidth="150.0" text="BACK" />
+      <Button layoutX="35.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Home" />
+      <Button layoutX="300.0" layoutY="25.0" mnemonicParsing="false" onAction="#showPrevious" prefHeight="50.0" prefWidth="150.0" styleClass="danger" text="BACK" />
    </children>
 </AnchorPane>
