--- a/sellit/src/main/java/com/sellit/controller/Menu.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Menu.fxml
@@ -1,20 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="166.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.MenuController">
+<AnchorPane prefHeight="1080.0" prefWidth="220.0" style="-fx-background-color: #337ab7;" stylesheets="@../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.MenuController">
    <children>
-      <VBox layoutX="14.0" layoutY="92.0" prefHeight="600.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="14.0" layoutY="276.0" prefHeight="1000.0" prefWidth="220.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Sale" />
-            <Button mnemonicParsing="false" onAction="#showInventory" prefHeight="50.0" prefWidth="166.0" text="Inventory" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Customer" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Employee" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Report" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Options" />
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="166.0" text="Notice" />
+            <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="220.0" styleClass="flat-button" text="Home" />
+            <Label prefHeight="50.0" prefWidth="220.0" />
+            <Button mnemonicParsing="false" onAction="#showPrevious" prefHeight="50.0" prefWidth="220.0" text="Back">
+               <styleClass>
+                  <String fx:value="danger" />
+                  <String fx:value="flat-button" />
+               </styleClass>
+            </Button>
+            <Separator prefWidth="200.0" />
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Sale">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" onAction="#showInventory" prefHeight="50.0" prefWidth="220.0" text="Inventory">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Customer">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Employee">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Report">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Options">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
+            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Notice">
+               <styleClass>
+                  <String fx:value="primary" />
+                  <String fx:value="flat-button" />
+               </styleClass></Button>
          </children>
       </VBox>
    </children>
