--- a/sellit/src/main/java/com/sellit/controller/inventory/DepartmentListView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/DepartmentListView.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentListViewController">
+<AnchorPane prefHeight="900.0" prefWidth="1920.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentListViewController">
    <children>
       <SplitPane dividerPositions="0.15" layoutX="93.0" layoutY="75.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <Label layoutX="14.0" layoutY="20.0" text="Department Name" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="20.0" />
-                  <TextField fx:id="departmentNameField" layoutX="123.0" layoutY="16.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="16.0" />
-                  <Button layoutX="904.0" layoutY="51.0" mnemonicParsing="false" onAction="#modifyDepartment" prefHeight="30.0" prefWidth="80.0" text="Modify" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="51.0" />
-                  <Button layoutX="815.0" layoutY="51.0" mnemonicParsing="false" onAction="#addNewDepartment" prefHeight="30.0" prefWidth="80.0" text="Add New" AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="51.0" />
-                  <Button layoutX="281.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchDepartmentNameContaining" prefHeight="30.0" prefWidth="80.0" text="Search" />
+                  <Label layoutX="14.0" layoutY="60.0" text="Department Name" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="60.0" />
+                  <TextField fx:id="departmentNameField" layoutX="123.0" layoutY="53.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="53.0" />
+                  <Button layoutX="1754.0" layoutY="52.0" mnemonicParsing="false" onAction="#modifyDepartment" prefHeight="30.0" prefWidth="150.0" text="Modify" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="52.0" />
+                  <Button layoutX="1592.0" layoutY="53.0" mnemonicParsing="false" onAction="#addNewDepartment" prefHeight="30.0" prefWidth="150.0" styleClass="plain" text="Add New" AnchorPane.rightAnchor="176.0" AnchorPane.topAnchor="53.0" />
+                  <Button layoutX="281.0" layoutY="51.0" mnemonicParsing="false" onAction="#searchDepartmentNameContaining" prefHeight="30.0" prefWidth="150.0" text="Search" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="361.0" prefWidth="798.0">
                <children>
