--- a/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
@@ -3,12 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentManageViewController">
+<AnchorPane prefHeight="1080.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentManageViewController">
    <children>
-      <Label layoutX="67.0" layoutY="111.0" text="Department Name" />
-      <TextField fx:id="departmentNameField" layoutX="233.0" layoutY="107.0" />
-      <Button layoutX="527.0" layoutY="107.0" mnemonicParsing="false" onAction="#save" text="Save" />
+      <TitledPane animated="false" layoutX="638.0" layoutY="407.0" prefHeight="267.0" prefWidth="424.0" text="Department">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="561.0" prefWidth="385.0">
+               <children>
+                  <Label layoutX="55.0" layoutY="56.0" text="Department Name" />
+                  <TextField fx:id="departmentNameField" layoutX="221.0" layoutY="52.0" />
+                  <Button layoutX="329.0" layoutY="177.0" mnemonicParsing="false" onAction="#save" text="Save" />
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
    </children>
 </AnchorPane>
