--- a/sellit/src/main/java/com/sellit/controller/inventory/InventoryMainView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/InventoryMainView.fxml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.InventoryMainViewController">
+<AnchorPane prefHeight="1080.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.InventoryMainViewController">
    <children>
-      <Button layoutX="190.0" layoutY="117.0" mnemonicParsing="false" onAction="#showProductList" text="Product" />
-      <Button layoutX="253.0" layoutY="117.0" mnemonicParsing="false" onAction="#showDepartmentList" text="Department" />
+      <VBox prefHeight="1080.0" prefWidth="220.0" style="-fx-background-color: #5bc0de;">
+         <children>
+            <Button mnemonicParsing="false" onAction="#showProductList" prefHeight="50.0" prefWidth="220.0" text="Product">
+               <styleClass>
+                  <String fx:value="info" />
+                  <String fx:value="flat-button" />
+               </styleClass>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#showDepartmentList" prefHeight="50.0" prefWidth="220.0" text="Department">
+               <styleClass>
+                  <String fx:value="info" />
+                  <String fx:value="flat-button" />
+               </styleClass>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
