--- a/sellit/src/main/java/com/sellit/controller/PopupWindow.fxml
+++ b/sellit/src/main/java/com/sellit/controller/PopupWindow.fxml
@@ -3,11 +3,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.PopupWindowController">
+<AnchorPane prefHeight="300.0" prefWidth="1920.0" style="-fx-background-color: #0099CC;" stylesheets="@../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.PopupWindowController">
    <children>
-      <Button layoutX="1062.0" layoutY="213.0" mnemonicParsing="false" onAction="#close" text="Okay" />
-      <Label fx:id="titleLabel" layoutX="25.0" layoutY="23.0" text="Title" />
-      <Label fx:id="messageLabel" layoutX="25.0" layoutY="54.0" text="Message" />
+      <Button layoutX="850.0" layoutY="226.0" mnemonicParsing="false" onAction="#close" prefHeight="50.0" prefWidth="220.0" text="OK" />
+      <Label fx:id="titleLabel" layoutX="493.0" layoutY="45.0" text="Title" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font></Label>
+      <Label fx:id="messageLabel" layoutX="498.0" layoutY="119.0" text="Message" textFill="WHITE" />
    </children>
 </AnchorPane>
