--- a/sellit/src/main/java/com/sellit/controller/Menu.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Menu.fxml
@@ -9,9 +9,9 @@
 
 <AnchorPane prefHeight="1080.0" prefWidth="220.0" style="-fx-background-color: #337ab7;" stylesheets="@../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.MenuController">
    <children>
-      <VBox layoutX="14.0" layoutY="276.0" prefHeight="1000.0" prefWidth="220.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="14.0" layoutY="276.0" prefHeight="853.0" prefWidth="220.0" AnchorPane.bottomAnchor="227.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="220.0" styleClass="flat-button" text="Home" />
+            <Button fx:id="btnLogo" mnemonicParsing="false" prefHeight="100.0" prefWidth="220.0" style="-fx-background-color: #FFFFFF;" styleClass="flat-button" />
             <Label prefHeight="50.0" prefWidth="220.0" />
             <Button mnemonicParsing="false" onAction="#showPrevious" prefHeight="50.0" prefWidth="220.0" text="Back">
                <styleClass>
@@ -57,5 +57,11 @@
                </styleClass></Button>
          </children>
       </VBox>
+      <Button layoutY="1030.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="50.0" prefWidth="220.0" text="Exit">
+         <styleClass>
+            <String fx:value="primary" />
+            <String fx:value="flat-button" />
+         </styleClass>
+      </Button>
    </children>
 </AnchorPane>
