--- a/sellit/src/main/java/com/sellit/controller/Menu.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Menu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -56,6 +57,9 @@
                   <String fx:value="flat-button" />
                </styleClass></Button>
          </children>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
       </VBox>
       <Button layoutY="1030.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="50.0" prefWidth="220.0" text="Exit">
          <styleClass>
