--- a/sellit/src/main/java/com/sellit/controller/Menu.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Menu.fxml
@@ -36,7 +36,7 @@
                   <String fx:value="primary" />
                   <String fx:value="flat-button" />
                </styleClass></Button>
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="220.0" text="Employee">
+            <Button mnemonicParsing="false" onAction="#showEmployee" prefHeight="50.0" prefWidth="220.0" text="Employee">
                <styleClass>
                   <String fx:value="primary" />
                   <String fx:value="flat-button" />
