--- a/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/DepartmentManageView.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentManageViewController">
+<AnchorPane prefHeight="1080.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.DepartmentManageViewController">
    <children>
-      <TitledPane animated="false" layoutX="638.0" layoutY="407.0" prefHeight="267.0" prefWidth="424.0" text="Department">
+      <TitledPane animated="false" layoutX="625.0" layoutY="290.0" prefHeight="500.0" prefWidth="450.0" styleClass="info" text="Department">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="561.0" prefWidth="385.0">
                <children>
-                  <Label layoutX="55.0" layoutY="56.0" text="Department Name" />
-                  <TextField fx:id="departmentNameField" layoutX="221.0" layoutY="52.0" />
-                  <Button layoutX="329.0" layoutY="177.0" mnemonicParsing="false" onAction="#save" text="Save" />
+                  <Label layoutX="54.0" layoutY="57.0" text="Department Name" />
+                  <TextField fx:id="departmentNameField" layoutX="221.0" layoutY="50.0" />
+                  <Button layoutX="271.0" layoutY="337.0" mnemonicParsing="false" onAction="#save" prefHeight="30.0" prefWidth="100.0" styleClass="success" text="Save" />
                </children>
             </AnchorPane>
         </content>
