--- a/sellit/src/main/java/com/sellit/controller/inventory/ProductListView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/ProductListView.fxml
@@ -8,20 +8,20 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.ProductListViewController">
+<AnchorPane prefHeight="900.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.ProductListViewController">
    <children>
       <SplitPane dividerPositions="0.15" layoutX="93.0" layoutY="75.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="1700.0" stylesheets="@../../../../../resources/css/bootstrap3.css">
                <children>
                   <Label layoutX="14.0" layoutY="57.0" text="Product Name" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
-                  <Label layoutX="14.0" layoutY="20.0" text="Barcode" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="20.0" />
-                  <TextField fx:id="barcodeField" layoutX="123.0" layoutY="16.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="16.0" />
+                  <Label layoutX="400.0" layoutY="47.0" text="Barcode" />
+                  <TextField fx:id="barcodeField" layoutX="509.0" layoutY="40.0" prefWidth="220.0" />
                   <TextField fx:id="productNameField" layoutX="123.0" layoutY="53.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="53.0" />
-                  <Button layoutX="904.0" layoutY="51.0" mnemonicParsing="false" onAction="#modifyProduct" prefHeight="30.0" prefWidth="80.0" text="Modify" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="51.0" />
-                  <Button layoutX="815.0" layoutY="51.0" mnemonicParsing="false" onAction="#addNewProduct" prefHeight="30.0" prefWidth="80.0" text="Add New" AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="51.0" />
-                  <Button layoutX="281.0" layoutY="51.0" mnemonicParsing="false" onAction="#searchProductNameContaining" prefHeight="30.0" prefWidth="80.0" text="Search" AnchorPane.leftAnchor="281.0" AnchorPane.topAnchor="51.0" />
-                  <Button layoutX="281.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchBarcode" prefHeight="30.0" prefWidth="80.0" text="Search" />
+                  <Button layoutX="1317.0" layoutY="30.0" mnemonicParsing="false" onAction="#modifyProduct" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Modify" />
+                  <Button layoutX="1090.0" layoutY="30.0" mnemonicParsing="false" onAction="#addNewProduct" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Add New" />
+                  <Button layoutX="281.0" layoutY="51.0" mnemonicParsing="false" onAction="#search" prefHeight="30.0" prefWidth="80.0" text="Search" AnchorPane.leftAnchor="281.0" AnchorPane.topAnchor="51.0" />
+                  <Button layoutX="739.0" layoutY="30.0" mnemonicParsing="false" onAction="#search" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Search" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="361.0" prefWidth="798.0">
                <children>
