--- a/sellit/src/main/java/com/sellit/controller/inventory/ProductListView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/ProductListView.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,14 +14,11 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="1700.0" stylesheets="@../../../../../resources/css/bootstrap3.css">
                <children>
-                  <Label layoutX="14.0" layoutY="57.0" text="Product Name" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
-                  <Label layoutX="400.0" layoutY="47.0" text="Barcode" />
-                  <TextField fx:id="barcodeField" layoutX="509.0" layoutY="40.0" prefWidth="220.0" />
-                  <TextField fx:id="productNameField" layoutX="123.0" layoutY="53.0" AnchorPane.leftAnchor="123.0" AnchorPane.topAnchor="53.0" />
+                  <TextField fx:id="searchField" layoutX="509.0" layoutY="40.0" prefWidth="220.0" />
                   <Button layoutX="1317.0" layoutY="30.0" mnemonicParsing="false" onAction="#modifyProduct" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Modify" />
                   <Button layoutX="1090.0" layoutY="30.0" mnemonicParsing="false" onAction="#addNewProduct" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Add New" />
-                  <Button layoutX="281.0" layoutY="51.0" mnemonicParsing="false" onAction="#search" prefHeight="30.0" prefWidth="80.0" text="Search" AnchorPane.leftAnchor="281.0" AnchorPane.topAnchor="51.0" />
                   <Button layoutX="739.0" layoutY="30.0" mnemonicParsing="false" onAction="#search" prefHeight="50.0" prefWidth="220.0" styleClass="info" text="Search" />
+                  <ComboBox fx:id="searchCombo" layoutX="351.0" layoutY="40.0" prefWidth="150.0" />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="361.0" prefWidth="798.0">
                <children>
