--- a/sellit/src/main/java/com/sellit/controller/inventory/ProductManageView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/inventory/ProductManageView.fxml
@@ -4,29 +4,37 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.ProductManageViewController">
+<AnchorPane prefHeight="1080.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.inventory.ProductManageViewController">
    <children>
-      <Label layoutX="14.0" layoutY="103.0" text="Full name" />
-      <Label layoutX="14.0" layoutY="66.0" text="Barcode" />
-      <TextField fx:id="barcodeField" layoutX="181.0" layoutY="66.0" />
-      <TextField fx:id="fullNameField" layoutX="181.0" layoutY="103.0" />
-      <Button layoutX="907.0" layoutY="51.0" mnemonicParsing="false" onAction="#close" prefHeight="30.0" prefWidth="80.0" text="Cancel" />
-      <Button layoutX="818.0" layoutY="51.0" mnemonicParsing="false" onAction="#save" prefHeight="30.0" prefWidth="80.0" text="Save" />
-      <Label layoutX="14.0" layoutY="174.0" text="Short name in other langauge" />
-      <Label layoutX="14.0" layoutY="137.0" text="Short name in English" />
-      <TextField fx:id="shortNameInEnglishField" layoutX="181.0" layoutY="137.0" />
-      <TextField fx:id="shortNameInOtherLanguageField" layoutX="181.0" layoutY="174.0" />
-      <Label layoutX="14.0" layoutY="248.0" text="Safety inventory on hand" />
-      <Label layoutX="14.0" layoutY="211.0" text="Inventory on hand" />
-      <TextField fx:id="inventoryOnHandField" layoutX="181.0" layoutY="211.0" />
-      <TextField fx:id="safetyInventoryOnHandField" layoutX="181.0" layoutY="248.0" />
-      <Label layoutX="14.0" layoutY="318.0" text="Sales amount" />
-      <Label layoutX="14.0" layoutY="281.0" text="Cost amount" />
-      <TextField fx:id="costAmountField" layoutX="181.0" layoutY="281.0" />
-      <TextField fx:id="salesAmountField" layoutX="181.0" layoutY="318.0" />
-      <ChoiceBox fx:id="departmentChoiceBox" layoutX="181.0" layoutY="26.0" prefWidth="150.0" />
-      <Label layoutX="14.0" layoutY="30.0" text="Department" />
+      <TitledPane animated="false" layoutX="625.0" layoutY="290.0" prefHeight="600.0" prefWidth="450.0" styleClass="info" text="Product">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="75.0" layoutY="138.0" text="Full name" />
+                  <Label layoutX="75.0" layoutY="98.0" text="Barcode" />
+                  <TextField fx:id="barcodeField" layoutX="239.0" layoutY="91.0" />
+                  <TextField fx:id="fullNameField" layoutX="239.0" layoutY="131.0" />
+                  <Button layoutX="290.0" layoutY="456.0" mnemonicParsing="false" onAction="#save" prefHeight="30.0" prefWidth="100.0" styleClass="success" text="Save" />
+                  <Label layoutX="75.0" layoutY="218.0" text="Short name in other langauge" />
+                  <Label layoutX="75.0" layoutY="178.0" text="Short name in English" />
+                  <TextField fx:id="shortNameInEnglishField" layoutX="239.0" layoutY="171.0" />
+                  <TextField fx:id="shortNameInOtherLanguageField" layoutX="239.0" layoutY="211.0" />
+                  <Label layoutX="75.0" layoutY="298.0" text="Safety inventory on hand" />
+                  <Label layoutX="75.0" layoutY="258.0" text="Inventory on hand" />
+                  <TextField fx:id="inventoryOnHandField" layoutX="239.0" layoutY="251.0" />
+                  <TextField fx:id="safetyInventoryOnHandField" layoutX="239.0" layoutY="291.0" />
+                  <Label layoutX="75.0" layoutY="378.0" text="Sales amount" />
+                  <Label layoutX="75.0" layoutY="338.0" text="Cost amount" />
+                  <TextField fx:id="costAmountField" layoutX="239.0" layoutY="331.0" />
+                  <TextField fx:id="salesAmountField" layoutX="239.0" layoutY="371.0" />
+                  <ChoiceBox fx:id="departmentChoiceBox" layoutX="239.0" layoutY="51.0" prefWidth="150.0" />
+                  <Label layoutX="75.0" layoutY="58.0" text="Department" />
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
    </children>
 </AnchorPane>
